fixed some layout problem

--- a/docs/CSS/style.css
+++ b/docs/CSS/style.css
@@ -192,7 +192,7 @@ a{
         padding-left: 0;
     }
 }
-@media (max-width: 400px){
+@media (max-width: 375px){
     .nav-bar{
         padding-bottom: 0px;
     }
@@ -200,11 +200,10 @@ a{
         margin-top: 5px;
     }
     .nav-bar ul a .logo{
-        width: 70%;
+        width: 50%;
     }
     .nav-bar ul a{
         width: 100%;
-        padding-left: 25%;
     }
     .nav-bar ul li{
         height: 30px;
@@ -453,6 +452,11 @@ input:first-child, input:nth-child(2){
 input:nth-child(4){
     height: 200px;
     margin-top: 10px;
+}
+@media (max-width:375px) {
+    .contact-us form{
+        width: 90%;
+    }
 }
 /*end contact us section*/
 
